--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASE_URL_VERSION=http://127.0.0.1:8000//api/v2
+BASE_URL_VERSION=https://flexirewards.club/api
 BASE_URL=https://paymoney.homemaintaining.com/api-test/api/v2
 PAYPAL_SANDBOX_URL=https://api.sandbox.paypal.com
 PAYPAL_LIVE_URL=https://api.paypal.com
